fixed overlap on shop page in shopping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -566,6 +566,11 @@ a {
 }
 
 /* Shop page while shopping */
+
+#shopSSS {
+  padding-top: 14vh;
+}
+
 #shopNameHolder {
   display: flex;
   align-items: center;
